[package]
name = "wasmnet"
version = "0.1.0"
edition = "2024"
description = "Networking proxy for browser WASM — bridges WASI socket APIs to real TCP via WebSocket"
license = "MIT"

[[bin]]
name = "wasmnet-server"
path = "src/main.rs"

[lib]
name = "wasmnet"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
toml = "1.0.3"
ipnet = "2.11.0"
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.102"
